[gd_scene load_steps=14 format=1]

[ext_resource path="res://temple/temple.gd" type="Script" id=1]
[ext_resource path="res://temple/assets/bgprogress.png" type="Texture" id=2]
[ext_resource path="res://temple/assets/frontprogress.png" type="Texture" id=3]
[ext_resource path="res://temple/assets/font20.fnt" type="BitmapFont" id=4]
[ext_resource path="res://temple/assets/font26.fnt" type="BitmapFont" id=5]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=6]
[ext_resource path="res://temple/assets/background2.png" type="Texture" id=7]
[ext_resource path="res://instructions/sensei.tscn" type="PackedScene" id=8]
[ext_resource path="res://temple/assets/sofa.png" type="Texture" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 0, 0, 0, -30, 830, -30, 800, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( 800, 0, 830, -30, 830, 480, 800, 480 )

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( 0, 480, 830, 480, 830, 510, -30, 510 )

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( 0, 480, -30, 510, -30, 0, 0, 0 )

[node name="temple" type="Node2D"]

script/script = ExtResource( 1 )

[node name="hud" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Control" type="Control" parent="hud"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 800.0
margin/bottom = 480.0
__meta__ = { "_edit_lock_":true }

[node name="life" type="TextureProgress" parent="hud/Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 435.0
margin/top = 435.0
margin/right = 595.0
margin/bottom = 455.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 2 )
texture/over = null
texture/progress = ExtResource( 3 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="text" type="Label" parent="hud/Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 420.0
margin/top = 410.0
margin/right = 612.0
margin/bottom = 432.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 1
text = "Sensei Patience"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="numberLife" type="Label" parent="hud/Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 485.0
margin/top = 438.0
margin/right = 545.0
margin/bottom = 452.0
text = "100"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="rip" type="Label" parent="hud"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 430.0
margin/right = 278.0
margin/bottom = 456.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
text = "R.i.p Mosquitos: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="walls" type="Node2D" parent="."]

editor/display_folded = true
__meta__ = { "_edit_lock_":true }

[node name="bodyUpRight" type="StaticBody2D" parent="walls"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = { "_edit_lock_":true }

[node name="collision" type="CollisionPolygon2D" parent="walls/bodyUpRight"]

build_mode = 0
polygon = Vector2Array( 0, 0, 800, 0, 800, 480, 830, 480, 830, -30, 0, -30 )
shape_range = Vector2( 0, 1 )
trigger = false
__meta__ = { "_edit_lock_":true }

[node name="bodydownLeft" type="StaticBody2D" parent="walls"]

input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 4 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = { "_edit_lock_":true }

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="walls/bodydownLeft"]

build_mode = 0
polygon = Vector2Array( 0, 0, -30, 0, -30, 510, 830, 510, 830, 480, 0, 480 )
shape_range = Vector2( 0, 1 )
trigger = false
__meta__ = { "_edit_lock_":true }

[node name="player" parent="." instance=ExtResource( 6 )]

transform/pos = Vector2( 422, 172 )

[node name="background" type="Node2D" parent="."]

__meta__ = { "_edit_lock_":true }

[node name="background" type="Sprite" parent="background"]

z/z = -3
texture = ExtResource( 7 )
centered = false
modulate = Color( 1, 0.90625, 0.90625, 1 )
__meta__ = { "_edit_lock_":true }

[node name="timers" type="Node2D" parent="."]

transform/pos = Vector2( 450, 10 )

[node name="mosquitoTimer" type="Timer" parent="timers"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[node name="lifeTimer" type="Timer" parent="timers"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="senseiTimer" type="Timer" parent="timers"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="sensei" parent="." instance=ExtResource( 8 )]

[node name="items" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="items"]

transform/pos = Vector2( 425, 35 )
transform/scale = Vector2( 2.1875, 2.1875 )
texture = ExtResource( 9 )

[connection signal="timeout" from="timers/mosquitoTimer" to="." method="_on_mosquitoTimer_timeout"]

[connection signal="timeout" from="timers/lifeTimer" to="." method="_on_lifeTimer_timeout"]

[connection signal="timeout" from="timers/senseiTimer" to="." method="_on_senseiTimer_timeout"]


